--- a/layout.css
+++ b/layout.css
@@ -288,10 +288,11 @@ main {
 }
 
 .img-container {
-  margin: auto 0;
-  right: 0;
-  bottom: 0;
+  background-color: var(--color-dark);
+  background-position: center;
+  background-size: cover;
   left: 0;
+  padding-top: 91%;
   position: absolute;
   top: 0;
   width: 100%;
